--- a/reportes/ReportePago.jrxml
+++ b/reportes/ReportePago.jrxml
@@ -21,17 +21,8 @@
 	<queryString language="SQL">
 		<![CDATA[]]>
 	</queryString>
-	<field name="cliente" class="dto.ClienteDTO">
-		<fieldDescription><![CDATA[cliente]]></fieldDescription>
-	</field>
-	<field name="viaje" class="dto.ViajeDTO">
-		<fieldDescription><![CDATA[viaje]]></fieldDescription>
-	</field>
-	<field name="fechaVencimiento" class="java.sql.Date">
-		<fieldDescription><![CDATA[fechaVencimiento]]></fieldDescription>
-	</field>
-	<field name="valorViaje" class="java.math.BigDecimal">
-		<fieldDescription><![CDATA[valorViaje]]></fieldDescription>
+	<field name="pasaje" class="dto.PasajeDTO">
+		<fieldDescription><![CDATA[pasaje]]></fieldDescription>
 	</field>
 	<field name="pago" class="dto.PagoDTO">
 		<fieldDescription><![CDATA[pago]]></fieldDescription>
@@ -79,7 +70,7 @@
 				<textElement>
 					<font size="13"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{cliente}.getNombre().concat(" ").concat($F{cliente}.getApellido())]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{pasaje}.getCliente().getNombre().concat(" ").concat($F{pasaje}.getCliente().getApellido())]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="350" y="30" width="70" height="20" forecolor="#000000" uuid="73471874-579c-4079-a093-3c03ed4c15e5"/>
@@ -100,7 +91,7 @@
 				<textElement>
 					<font size="13"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{cliente}.getDni()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{pasaje}.getCliente().getDni()]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="10" y="30" width="124" height="20" forecolor="#000000" uuid="a30a3e68-14a7-4447-825e-dbb79df86adb"/>
@@ -173,7 +164,7 @@
 				<textElement textAlignment="Center">
 					<paragraph lineSpacing="1_1_2"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{viaje}.getFechaSalida().toString()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{pasaje}.getViaje().getFechaSalida().toString()]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement mode="Opaque" x="360" y="0" width="100" height="50" backcolor="#DBD9D9" uuid="c6eb03ac-14a0-4ae0-bde4-c9a0a3ea37d9"/>
@@ -185,7 +176,7 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center"/>
-				<textFieldExpression><![CDATA[$F{viaje}.getProvinciaOrigen().getNombre().concat(", ").concat($F{viaje}.getCiudadOrigen().getNombre())]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{pasaje}.getViaje().getPaisOrigen().getNombre().concat(", ").concat($F{pasaje}.getViaje().getProvinciaOrigen().getNombre()).concat(", ").concat($F{pasaje}.getViaje().getCiudadOrigen().getNombre())]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement mode="Opaque" x="460" y="0" width="95" height="50" backcolor="#DBD9D9" uuid="8ca2af01-df13-4bc5-8e8d-bfd199204bfb"/>
@@ -197,7 +188,7 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center"/>
-				<textFieldExpression><![CDATA[$F{viaje}.getProvinciaDestino().getNombre().concat(", ").concat($F{viaje}.getCiudadDestino().getNombre())]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{pasaje}.getViaje().getPaisDestino().getNombre().concat(", ").concat($F{pasaje}.getViaje().getProvinciaDestino().getNombre()).concat(", ").concat($F{pasaje}.getViaje().getCiudadDestino().getNombre())]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement mode="Opaque" x="90" y="0" width="91" height="50" backcolor="#DBD9D9" uuid="5f6f988f-284b-47b9-b313-5732725767a7"/>
@@ -211,7 +202,7 @@
 				<textElement textAlignment="Center">
 					<paragraph lineSpacing="1_1_2"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{viaje}.getFechaLlegada().toString()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{pasaje}.getViaje().getFechaLlegada().toString()]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement mode="Opaque" x="181" y="0" width="89" height="50" backcolor="#DBD9D9" uuid="88d6e916-affc-4fe7-bc0b-411604cf5133"/>
@@ -225,7 +216,7 @@
 				<textElement textAlignment="Center">
 					<paragraph lineSpacing="1_1_2"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{viaje}.getHoraSalida()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{pasaje}.getViaje().getHoraSalida()]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement mode="Opaque" x="270" y="0" width="90" height="50" backcolor="#DBD9D9" uuid="ff6d6701-fb96-4380-b1e3-bcbdb01c3e56"/>
@@ -239,12 +230,12 @@
 				<textElement textAlignment="Center">
 					<paragraph lineSpacing="1_1_2"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{viaje}.getTransporte().getNombre()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{pasaje}.getViaje().getTransporte().getNombre()]]></textFieldExpression>
 			</textField>
 		</band>
 		<band height="156">
 			<staticText>
-				<reportElement x="10" y="50" width="190" height="41" uuid="1ba7b96d-9eda-48d0-8273-7862f70b65f2"/>
+				<reportElement x="10" y="58" width="190" height="41" uuid="1ba7b96d-9eda-48d0-8273-7862f70b65f2"/>
 				<textElement>
 					<font size="15" isBold="true"/>
 					<paragraph lineSpacingSize="1.0"/>
@@ -252,22 +243,7 @@
 				<text><![CDATA[Monto pagado: $]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="134" y="90" width="131" height="41" uuid="26e351d2-d030-41f5-87bd-b977e64d9e63"/>
-				<textElement>
-					<font size="13"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{valorViaje}]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement x="10" y="90" width="124" height="41" uuid="0b6651e1-6e4e-4d02-af1e-6f434e1cd388"/>
-				<textElement>
-					<font size="15" isBold="true"/>
-					<paragraph lineSpacingSize="1.0"/>
-				</textElement>
-				<text><![CDATA[Monto total: $]]></text>
-			</staticText>
-			<textField>
-				<reportElement x="150" y="52" width="181" height="39" uuid="63316ef1-416d-4790-9d88-687e0c98c26f"/>
+				<reportElement x="150" y="60" width="181" height="39" uuid="63316ef1-416d-4790-9d88-687e0c98c26f"/>
 				<textElement>
 					<font size="13"/>
 				</textElement>
