--- a/reportes/ReporteReserva.jrxml
+++ b/reportes/ReporteReserva.jrxml
@@ -169,7 +169,7 @@
 				<textElement textAlignment="Center">
 					<paragraph lineSpacing="1_1_2"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{pasaje}.getViaje().getFechaSalida().toString()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{pasaje}.getFechaSalidaParseada()]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement mode="Opaque" x="360" y="0" width="100" height="50" backcolor="#DBD9D9" uuid="c6eb03ac-14a0-4ae0-bde4-c9a0a3ea37d9"/>
@@ -207,7 +207,7 @@
 				<textElement textAlignment="Center">
 					<paragraph lineSpacing="1_1_2"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{pasaje}.getViaje().getFechaLlegada().toString()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{pasaje}.getFechaLlegadaParseada()]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement mode="Opaque" x="181" y="0" width="89" height="50" backcolor="#DBD9D9" uuid="88d6e916-affc-4fe7-bc0b-411604cf5133"/>
@@ -252,7 +252,7 @@
 				<textElement>
 					<font size="12"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{pasaje}.getFechaVencimiento().toString()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{pasaje}.getFechaVencimientoParseada()]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="139" y="50" width="131" height="41" uuid="26e351d2-d030-41f5-87bd-b977e64d9e63"/>
