--- a/reportes/ReporteVentas.jrxml
+++ b/reportes/ReporteVentas.jrxml
@@ -30,11 +30,8 @@
 	<queryString language="SQL">
 		<![CDATA[]]>
 	</queryString>
-	<field name="nombre" class="java.lang.String">
-		<fieldDescription><![CDATA[nombre]]></fieldDescription>
-	</field>
-	<field name="nombre_1" class="java.lang.String">
-		<fieldDescription><![CDATA[nombre]]></fieldDescription>
+	<field name="administrativo" class="dto.AdministrativoDTO">
+		<fieldDescription><![CDATA[administrativo]]></fieldDescription>
 	</field>
 	<group name="GroupVentas">
 		<groupExpression><![CDATA[$F{administrativo}.getNombre()]]></groupExpression>
@@ -63,7 +60,21 @@
 			</band>
 		</groupHeader>
 		<groupFooter>
-			<band height="36"/>
+			<band height="62">
+				<frame>
+					<reportElement mode="Opaque" x="0" y="0" width="555" height="37" backcolor="#C3D2E3" uuid="8b0f4190-e3bd-4345-961d-9992a3f0aacc"/>
+					<box>
+						<pen lineColor="#FFFFFF"/>
+					</box>
+					<textField>
+						<reportElement x="190" y="10" width="365" height="27" uuid="c046a9e2-6006-46c2-a73f-2cf36b348378"/>
+						<textElement>
+							<font size="12" isBold="true" isItalic="true"/>
+						</textElement>
+						<textFieldExpression><![CDATA["Cantidad de ventas realizadas: " + $V{GroupVentas_COUNT}]]></textFieldExpression>
+					</textField>
+				</frame>
+			</band>
 		</groupFooter>
 	</group>
 	<background>
@@ -155,7 +166,7 @@
 					<reportElement x="-5" y="10" width="356" height="270" uuid="bcb41177-5a4e-4f4e-b4fe-9d4feb0d0b18"/>
 					<pieChart>
 						<chart isShowLegend="true" evaluationTime="Report">
-							<reportElement positionType="FixRelativeToBottom" stretchType="RelativeToBandHeight" mode="Transparent" x="5" y="20" width="345" height="230" uuid="1ddf6f77-f749-4716-88ba-eb2682270c77"/>
+							<reportElement positionType="FixRelativeToBottom" stretchType="RelativeToBandHeight" mode="Transparent" x="5" y="20" width="345" height="230" uuid="e6ddf398-314f-48d0-be6c-c9b48460dbf0"/>
 							<chartTitle>
 								<font size="15" isBold="false"/>
 								<titleExpression><![CDATA["Cantidad de ventas por personal administrativo"]]></titleExpression>
