--- a/reportes/ReporteCancelacionReserva.jrxml
+++ b/reportes/ReporteCancelacionReserva.jrxml
@@ -92,7 +92,7 @@
 				<textElement>
 					<font size="14"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{administrativo}.getNombre()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{administrativo}.getNombre().concat(" ").concat($F{administrativo}.getApellido())]]></textFieldExpression>
 			</textField>
 		</band>
 	</title>
