--- a/reportes/ReporteCancelacionVenta.jrxml
+++ b/reportes/ReporteCancelacionVenta.jrxml
@@ -70,7 +70,7 @@
 				</staticText>
 			</frame>
 			<textField>
-				<reportElement x="401" y="135" width="150" height="18" uuid="355fdc2c-045e-4f5f-95c8-4c0d7340cd13"/>
+				<reportElement x="411" y="135" width="150" height="18" uuid="355fdc2c-045e-4f5f-95c8-4c0d7340cd13"/>
 				<textElement>
 					<font size="14"/>
 				</textElement>
@@ -92,7 +92,7 @@
 				<textElement>
 					<font size="14"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{administrativo}.getNombre()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{administrativo}.getNombre().concat(" ").concat($F{administrativo}.getApellido())]]></textFieldExpression>
 			</textField>
 		</band>
 	</title>
