--- a/reportes/ReportePago.jrxml
+++ b/reportes/ReportePago.jrxml
@@ -53,11 +53,32 @@
 					<reportElement x="10" y="20" width="150" height="105" uuid="d05d0d4e-1810-43bf-8c48-a74e3f81a5cf"/>
 					<imageExpression><![CDATA["recursos/AlPlaneta.png"]]></imageExpression>
 				</image>
+				<textField>
+					<reportElement mode="Opaque" x="390" y="98" width="120" height="20" backcolor="#FFFFFF" uuid="83751c25-2008-452e-b38a-7390a955c786"/>
+					<box>
+						<pen lineColor="#FFFFFF"/>
+						<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#FFFFFF"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#FFFFFF"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					</box>
+					<textElement>
+						<font size="13"/>
+					</textElement>
+					<textFieldExpression><![CDATA[$F{pago}.getFechaParseada()]]></textFieldExpression>
+				</textField>
+				<staticText>
+					<reportElement x="289" y="98" width="100" height="31" uuid="bbb63c32-04a3-4f7d-a4a0-32c4eb40d690"/>
+					<textElement>
+						<font size="11" isBold="true"/>
+					</textElement>
+					<text><![CDATA[Fecha:]]></text>
+				</staticText>
 			</frame>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="50">
+		<band height="89">
 			<staticText>
 				<reportElement x="10" y="0" width="90" height="19" uuid="3db32c9b-bb92-4028-b3d7-fc5cf985d5bf"/>
 				<textElement>
@@ -79,26 +100,26 @@
 				</textElement>
 				<text><![CDATA[DNI:]]></text>
 			</staticText>
-			<textField>
-				<reportElement mode="Opaque" x="424" y="30" width="120" height="20" backcolor="#FFFFFF" uuid="83751c25-2008-452e-b38a-7390a955c786"/>
-				<box>
-					<pen lineColor="#FFFFFF"/>
-					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#FFFFFF"/>
-					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#FFFFFF"/>
-					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<textElement>
-					<font size="13"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{pasaje}.getCliente().getDni()]]></textFieldExpression>
-			</textField>
 			<staticText>
 				<reportElement x="10" y="30" width="124" height="20" forecolor="#000000" uuid="a30a3e68-14a7-4447-825e-dbb79df86adb"/>
 				<textElement textAlignment="Center">
 					<font size="12" isBold="true" isItalic="true"/>
 				</textElement>
 				<text><![CDATA[Nombre y apellido:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="100" y="50" width="300" height="31" uuid="c255f190-8282-443e-96e3-62413e083677"/>
+				<textElement>
+					<font size="14"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{pasaje}.getAdministrativo().getNombre().concat(" ").concat($F{pasaje}.getAdministrativo().getApellido())]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="10" y="50" width="100" height="31" uuid="70789717-80f5-4d30-b319-df58b359edb7"/>
+				<textElement>
+					<font size="11" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Atendido por:]]></text>
 			</staticText>
 		</band>
 	</pageHeader>
